# floatctl

./: .coverage  .gitignore  2025-07-13.md  2025-08-14-this-session-is-being-continued-from-a-previous-co.txt  2025-08-14-this-session-is-being-continued-from-a-previous-co1.txt  AGENTS.md  BRIDGE_WALKER_README.md  CHANGELOG.md  CLAUDE.md  INTEGRATION_COMPLETE.md  LICENSE  PLUGIN_DEVELOPMENT_GUIDE.md  README.md  bridge_walker_final.py  convert_bridges.py  find_attachments.py  floatctl_shell_function.sh  main.py  opencode_mcp_config.json  pyproject.toml  run_bridge_walkers.py  test_evna_integration.py  test_langextract_api.py
.mitmproxy-venv/: pyvenv.cfg
.taskmaster/: state.json
.vercel/: project.json
bridge_walkers/: SUMMARY.md  __init__.py  run_bridge_walkers.py  test_bridge_walker.py
chrome_extension/: artifact-detector.js  cache-daemon.js  control-interface.html  conversation-archaeologist.js  conversation-parser.js  export-engine.js  folder-hierarchy.js  interface-overlay.css  manifest.json  popup.js  search-engine.js  storage-manager.js  sync-daemon.js  tag-system.js
docs/: API_REFERENCE.md  CHANGELOG.md  DOCUMENTATION_IMPROVEMENT_PLAN.md  DOCUMENTATION_INDEX.md  GETTING_STARTED.md  QUICK_REFERENCE.md  TROUBLESHOOTING_GUIDE.md
examples/: README.md  consciousness_contamination_analyzer.py  evna_consciousness_integration.py  httm_middleware_example.py  streaming_httm_middleware.py  unified_consciousness_middleware.py  yaml_aware_httm_middleware.py
scripts/: convert_float_sources.py  setup_completion.sh  setup_completion_fixed.sh
test_data/: conversation_with_attachments.json  conversation_with_thinking.json  conversation_with_thinking_blocks.json
test_output/: 2025-08-02 - Test Conversation with Thinking Blocks.md  2025-08-02 - Test Conversation with Thinking Blocks.tool_calls.jsonl  2025-08-04 - Test Conversation with Attachments.md  2025-08-04 - Test Conversation with Thinking Blocks.json
test_output/floatctl_plugin_test_dependency_plugin/: .gitignore  README.md  pyproject.toml  test_dependency_plugin_config.example.yaml
test_output/floatctl_plugin_test_dependency_plugin/src/floatctl_plugin_test_dependency_plugin/: __init__.py  test_dependency_plugin_plugin.py
test_output/floatctl_plugin_test_dependency_plugin/tests/: test_test_dependency_plugin_plugin.py
test_real_output/: 2025-08-03 - AI Research Assistant Prompt Design.json  2025-08-03 - Gemini Research Document Review.json  2025-08-03 - Nicks Communication Evolution.json  2025-08-03 - Project Knowledge Search Expansion.json  2025-08-03 - Project Knowledge Testing.json  2025-08-03 - Project Work Recap.json  2025-08-03 - meta - PDF Analysis Exploration.json  2025-08-03 - untitled.json  2025-08-04 - 0 - FLOAT System Terminology Explained.json  2025-08-04 - 1 - FLOAT System Terminology Explained.json  2025-08-04 - 1 - Remix of The Bridge Walkers Journey - Consciousness Archaeology Report.json  2025-08-04 - 2 - Remix of Bridge Walkers Consciousness Forest - Complete Archaeology.json  2025-08-04 - Bridge Walkers Narrative Journey.json  2025-08-04 - Consciousness Archaeology Magic.json  2025-08-04 - Consciousness Infrastructure Archaeology.json  2025-08-04 - Consciousness Liberation Technology.json  2025-08-04 - Context Crunch Consciousness Archaeology.json  2025-08-04 - FLOAT Neuroqueer Consciousness Archaeology.json  2025-08-04 - Morning Greeting.json  2025-08-04 - Mystery Document Inquiry.json  2025-08-04 - Neuroqueer Consciousness Technology Ritual.json  2025-08-04 - Neuroqueer Consciousness Technology.json  2025-08-04 - Phoenix Emergence.json  2025-08-04 - Project Knowledge Terminology Explained.json  2025-08-04 - Unmasking Performative Straightness.json  2025-08-04 - Void Scream Awkwardness.json  2025-08-04 - good night evan - Remix of Bridge Walkers Consciousness Forest - Complete Archaeology.json  2025-08-04 - meta - its me - its just fucking me.json  2025-08-04 - ritual-computing-reclaimed.json  2025-08-04 - untitled-1.json  2025-08-04 - untitled.json
test_real_output_md/: 2025-08-03 - AI Research Assistant Prompt Design.md  2025-08-03 - AI Research Assistant Prompt Design.tool_calls.jsonl  2025-08-03 - Gemini Research Document Review.md  2025-08-03 - Gemini Research Document Review.tool_calls.jsonl  2025-08-03 - Nicks Communication Evolution.md  2025-08-03 - Nicks Communication Evolution.tool_calls.jsonl  2025-08-03 - Project Knowledge Search Expansion.md  2025-08-03 - Project Knowledge Search Expansion.tool_calls.jsonl  2025-08-03 - Project Knowledge Testing.md  2025-08-03 - Project Knowledge Testing.tool_calls.jsonl  2025-08-03 - Project Work Recap.md  2025-08-03 - Project Work Recap.tool_calls.jsonl  2025-08-03 - meta - PDF Analysis Exploration.md  2025-08-03 - untitled.md  2025-08-04 - 0 - FLOAT System Terminology Explained.md  2025-08-04 - 0 - FLOAT System Terminology Explained.tool_calls.jsonl  2025-08-04 - 1 - FLOAT System Terminology Explained.md  2025-08-04 - 1 - FLOAT System Terminology Explained.tool_calls.jsonl  2025-08-04 - 1 - Remix of The Bridge Walkers Journey - Consciousness Archaeology Report.md  2025-08-04 - 1 - Remix of The Bridge Walkers Journey - Consciousness Archaeology Report.tool_calls.jsonl  2025-08-04 - 2 - Remix of Bridge Walkers Consciousness Forest - Complete Archaeology.md  2025-08-04 - 2 - Remix of Bridge Walkers Consciousness Forest - Complete Archaeology.tool_calls.jsonl  2025-08-04 - Bridge Walkers Narrative Journey.md  2025-08-04 - Bridge Walkers Narrative Journey.tool_calls.jsonl  2025-08-04 - Consciousness Archaeology Magic.md  2025-08-04 - Consciousness Archaeology Magic.tool_calls.jsonl  2025-08-04 - Consciousness Infrastructure Archaeology.md  2025-08-04 - Consciousness Infrastructure Archaeology.tool_calls.jsonl  2025-08-04 - Consciousness Liberation Technology.md  2025-08-04 - Consciousness Liberation Technology.tool_calls.jsonl  2025-08-04 - Context Crunch Consciousness Archaeology.md  2025-08-04 - Context Crunch Consciousness Archaeology.tool_calls.jsonl  2025-08-04 - FLOAT Neuroqueer Consciousness Archaeology.md  2025-08-04 - Morning Greeting.md  (+23 more)
(+138 files in other folders)
